--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
     networks:
       - elastic
     ports:
-      - 9200:9200
+#      - 9200:9200
 #      - 9300:9300
 
     volumes:
@@ -50,13 +50,13 @@ services:
     links:
         - elasticsearch
 
-  nginx:
+  nginx-kibana:
     image: beevelop/nginx-basic-auth
     container_name: nginx-kibana-auth
     depends_on:
       - kibana
     environment:
-      - HTPASSWD=logic:{PLAIN}password
+      - HTPASSWD=login:{PLAIN}password
       - FORWARD_PORT=5601
     networks:
       - elastic
@@ -64,6 +64,21 @@ services:
       - 80:80
     links:
       - kibana:web
+
+  nginx-es:
+    image: beevelop/nginx-basic-auth
+    container_name: nginx-es-auth
+    depends_on:
+      - elasticsearch
+    environment:
+      - HTPASSWD=login:{PLAIN}password
+      - FORWARD_PORT=9200
+    networks:
+      - elastic
+    ports:
+      - 80:80
+    links:
+      - elasticsearch:web
 
 volumes:
   esdata:
